Bug 406839 - EMails stuck in outgoing forever without warning msg
Summary: EMails stuck in outgoing forever without warning msg
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messagecomposer (other bugs)
Version First Reported In: 5.13.3
Platform: Neon Linux
: NOR grave
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-24 10:28 UTC by Tom Kijas
Modified: 2022-12-01 12:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Kijas 2019-04-24 10:28:06 UTC
SUMMARY
KMail doesn't send some emails using GMail (Google apps), the bug exists for YEARS!

STEPS TO REPRODUCE
1. Setup google apps (email on own domain)
2. send message to another gmail adress
3. send message to another Email adress

OBSERVED RESULT
First email sent without problems, second stuck in OUTGOING FOREVER!

EXPECTED RESULT
To work properly, it is unusable piece of crap if people in corporate cannot use it properly! 
At least warn user the email hasn't been sent!

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: KDE Neon User edition
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.57
Qt Version: 5.12

ADDITIONAL INFORMATION
Comment 1 Fabian Vogt 2022-11-24 07:47:31 UTC
Git commit d677a08c21fd99e7e8be0a0899f797f9237207e4 by Fabian Vogt.
Committed on 22/11/2022 at 07:19.
Pushed by fvogt into branch 'release/22.12'.

Don't cache promises for AccountManager::findAccount

Unlike AccountManager::getAccount and AccountManager::refreshTokens, this
method does not return an authenticated account. However, the promises are
cached for all of them in the same store, so it was possible for a call to
e.g. refreshTokens to get a promise created by findAccount instead, resulting
in an unexpected result. Just don't cache promises created by findAccount.
Related: bug 409122, bug 421664, bug 456923

M  +18   -20   src/core/accountmanager.cpp

https://invent.kde.org/pim/libkgapi/commit/d677a08c21fd99e7e8be0a0899f797f9237207e4
Comment 2 Fabian Vogt 2022-12-01 12:25:00 UTC
Git commit 7b2a5ccea0c54b81245acdbbea77a13e570bba2b by Fabian Vogt.
Committed on 01/12/2022 at 12:12.
Pushed by fvogt into branch 'release/22.12'.

SmtpJob: Fix use of KCompositeJob

SmtpJob overrides slotResult, but this had two issues. First, it connected
to LoginJob::result itself, though addJob already does that. Second, in two
cases it did not remove finished jobs from the list of subjobs, leading to
dangling pointers and messing up state. This was most likely only reached
in the case of an expired XOAUTH2 access_token and caused the job to fail
after a successful refresh.
Related: bug 409122, bug 421664, bug 456923

M  +2    -2    src/kmailtransport/plugins/smtp/smtpjob.cpp

https://invent.kde.org/pim/kmailtransport/commit/7b2a5ccea0c54b81245acdbbea77a13e570bba2b